--- a/tbr.html
+++ b/tbr.html
@@ -1,67 +1,118 @@
-## AWS Assignment
-## 🔑 Prerequisites:
-Laptop with internet access.
-AWS Free Tier account (credit/debit card required for signup).
-Basic Linux commands knowledge (yum, apt, curl).
-### In AWS:
-  VPC (10.0.0.0/16):SUBNET(PUBLIC(10.0.1.0/24) AND PRIVATE(10.0.2.0/24))
-  ROUTE,NAT,SECURITY GROUP(SSH,HTTP AND PORT 8080 for docker) 
-  Create  the key(pem) same for all ec2 virtual machine !
-  
-## Objectives
- Stand up a basic two-subnet VPC in AWS (public + private).
-## Launch:
- Private EC2 (no public IP) — Ansible control node.
- use elastic ip for private ec2 for installatiion
- Jump host in public subnet — for SSH into the private EC2.
- ```
- if you dont know how to copy directly dont worry just view your downloaded pem file using notepad and copy the key and paste is to virtual machine using nano key.pem
- give permission to your key.pem to
- chmod 400 key.pem !!!
- ```
- Web server in public subnet.
- ```
-  use sudo for docker command
- ``` 
- From the private EC2, run the provided Ansible playbook to install Apache on the public web server
- and serve a page with Name + Roll No.
- Additionally, containerize a simple Apache site by building a basic Docker image that serves the same page.
- ## Deliverables (brief)
- Public web server URL showing Name + Roll No.
- One screenshot of Ansible run completion.
- One screenshot of your Docker container serving the same page locally (docker run …).
- One diagram or bullet list of your VPC + subnets + instances (very brief).
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>AWS Assignment</title>
+  <style>
+    body {
+      font-family: system-ui, sans-serif;
+      margin: 2rem;
+      line-height: 1.6;
+    }
+    code {
+      background: #f4f4f4;
+      padding: 2px 5px;
+      border-radius: 4px;
+    }
+    pre {
+      background: #f4f4f4;
+      padding: 1rem;
+      border-radius: 5px;
+      overflow-x: auto;
+    }
+    h1, h2, h3 {
+      color: #333;
+    }
+    hr {
+      margin: 2rem 0;
+    }
+  </style>
+</head>
+<body>
 
-## Installation
-### Installing Ansible (on the Private EC2)
- Once your private EC2 instance is reachable (via SSH from your jump host), install Ansible using the package manager for your OS:
+<h1>AWS Assignment</h1>
 
-🟢 For Amazon Linux 2 / RHEL / CentOS
-```
-sudo yum update -y
+<h2>🔑 Prerequisites:</h2>
+<ul>
+  <li>Laptop with internet access.</li>
+  <li>AWS Free Tier account (credit/debit card required for signup).</li>
+  <li>Basic Linux commands knowledge (yum, apt, curl).</li>
+</ul>
+
+<h3>In AWS:</h3>
+<ul>
+  <li>VPC (10.0.0.0/16): SUBNET(PUBLIC(10.0.1.0/24) AND PRIVATE(10.0.2.0/24))</li>
+  <li>ROUTE, NAT, SECURITY GROUP (SSH, HTTP AND PORT 8080 for Docker)</li>
+  <li>Create the key (.pem) same for all EC2 virtual machines!</li>
+</ul>
+
+<h2>Objectives</h2>
+<p>Stand up a basic two-subnet VPC in AWS (public + private).</p>
+
+<h2>Launch:</h2>
+<ul>
+  <li>Private EC2 (no public IP) — Ansible control node.<br>Use Elastic IP for private EC2 for installation</li>
+  <li>Jump host in public subnet — for SSH into the private EC2.</li>
+</ul>
+
+<pre><code>
+If you don’t know how to copy directly, don’t worry.
+Just view your downloaded .pem file using Notepad and copy the key.
+Paste it to virtual machine using: nano key.pem
+Then set permissions:
+chmod 400 key.pem !!!
+</code></pre>
+
+<p><strong>Web server</strong> in public subnet.</p>
+
+<pre><code>
+use sudo for docker command
+</code></pre>
+
+<p>
+From the private EC2, run the provided Ansible playbook to install Apache on the public web server
+and serve a page with Name + Roll No. Additionally, containerize a simple Apache site by building a basic Docker image that serves the same page.
+</p>
+
+<h2>Deliverables (brief)</h2>
+<ul>
+  <li>Public web server URL showing Name + Roll No.</li>
+  <li>One screenshot of Ansible run completion.</li>
+  <li>One screenshot of your Docker container serving the same page locally (docker run …).</li>
+  <li>One diagram or bullet list of your VPC + subnets + instances (very brief).</li>
+</ul>
+
+<hr>
+
+<h2>Installation</h2>
+
+<h3>Installing Ansible (on the Private EC2)</h3>
+<p>Once your private EC2 instance is reachable (via SSH from your jump host), install Ansible:</p>
+
+<h4>🟢 Amazon Linux 2 / RHEL / CentOS</h4>
+<pre><code>sudo yum update -y
 sudo yum install -y ansible
-```
-or (if yum doesn’t have it)
-```
+# or
 sudo amazon-linux-extras install ansible2 -y
 ansible --version
-```
-🔵 For Ubuntu / Debian
-```
-sudo apt update -y
+</code></pre>
+
+<h4>🔵 Ubuntu / Debian</h4>
+<pre><code>sudo apt update -y
 sudo apt install -y ansible
 ansible --version
-```
-## inventory.ini
-```
+</code></pre>
+
+<h3>inventory.ini</h3>
+<pre><code>
 [web]
-<public-web-server-ip> ansible_user=ubuntu ansible_ssh_private_key_file=/yourpath/key.pem
-#for Amazon Linux 2
-<public-web-server-ip> ansible_user=ec2-user ansible_ssh_private_key_file=/yourpath/key.pem
-```
-### Site.yml
-```
----
+&lt;public-web-server-ip&gt; ansible_user=ubuntu ansible_ssh_private_key_file=/yourpath/key.pem
+# For Amazon Linux 2
+&lt;public-web-server-ip&gt; ansible_user=ec2-user ansible_ssh_private_key_file=/yourpath/key.pem
+</code></pre>
+
+<h3>Site.yml</h3>
+<pre><code>---
 - name: Bootstrap Apache and deploy Name/Roll page
   hosts: web
   become: true
@@ -96,29 +147,33 @@ ansible --version
         dest: "{{ doc_root }}/index.html"
         mode: '0644'
         content: |
-          <!doctype html>
-          <html>
-            <head><meta charset="utf-8"><title>Student</title></head>
-            <body style="font-family: system-ui; margin: 3rem;">
-              <h1>{{ student_name }}</h1>
-              <h2>Roll No: {{ roll_no }}</h2>
-              <p>Deployed via Ansible ✅</p>
-            </body>
-          </html>
+          &lt;!doctype html&gt;
+          &lt;html&gt;
+            &lt;head&gt;&lt;meta charset="utf-8"&gt;&lt;title&gt;Student&lt;/title&gt;&lt;/head&gt;
+            &lt;body style="font-family: system-ui; margin: 3rem;"&gt;
+              &lt;h1&gt;{{ student_name }}&lt;/h1&gt;
+              &lt;h2&gt;Roll No: {{ roll_no }}&lt;/h2&gt;
+              &lt;p&gt;Deployed via Ansible ✅&lt;/p&gt;
+            &lt;/body&gt;
+          &lt;/html&gt;
+</code></pre>
 
-```
-## Export your name and roll number
-export STUDENT_NAME="Alice Johnson"
+<h3>Set Your Environment Variables</h3>
+<pre><code>
+export STUDENT_NAME="xyz xyz"
 export ROLL_NO="123456"
+</code></pre>
 
-## run
-```
+<h3>Run Ansible Commands</h3>
+<pre><code>
 ansible -i inventory.ini web -m ping
 ansible-playbook -i inventory.ini site.yml
-```
-# Dockerfile (minimal Apache image)
-Builds a tiny image that serves the same page. No external files needed.
-```
+</code></pre>
+
+<hr>
+
+<h2>Dockerfile (minimal Apache image)</h2>
+<pre><code>
 # Simple Apache image that serves Name + Roll No
 FROM httpd:2.4-alpine
 
@@ -126,145 +181,43 @@ ARG STUDENT_NAME="Your Name"
 ARG ROLL_NO="0000"
 
 # Create a minimal index.html at container build time
-RUN printf '<!doctype html><html><head><meta charset="utf-8"><title>Student</title></head><body style="font-family: system-ui; margin: 3rem;"><h1>%s</h1><h2>Roll No: %s</h2><p>Served from Docker ✅</p></body></html>' \
+RUN printf '&lt;!doctype html&gt;&lt;html&gt;&lt;head&gt;&lt;meta charset="utf-8"&gt;&lt;title&gt;Student&lt;/title&gt;&lt;/head&gt;&lt;body style="font-family: system-ui; margin: 3rem;"&gt;&lt;h1&gt;%s&lt;/h1&gt;&lt;h2&gt;Roll No: %s&lt;/h2&gt;&lt;p&gt;Served from Docker ✅&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;' \
     "$STUDENT_NAME" "$ROLL_NO" \
-    > /usr/local/apache2/htdocs/index.html
+    &gt; /usr/local/apache2/htdocs/index.html
 
 EXPOSE 80
 CMD ["httpd-foreground"]
-```
-Step 1: Update system
-```
+</code></pre>
+
+<h3>Install Docker</h3>
+
+<pre><code>
+# Step 1
 sudo apt update
 sudo apt upgrade -y
-```
-Explanation: Updates package lists and upgrades existing packages.
 
-Step 2: Remove old versions
-```
+# Step 2
 sudo apt remove docker docker-engine docker.io containerd runc
-```
-Explanation: Ensures no legacy Docker is present.
 
-Step 3: Install required packages¶
-```
+# Step 3
 sudo apt install -y ca-certificates curl gnupg lsb-release
-```
-Explanation: These tools allow adding secure repositories and managing keys.
 
-Step 4: Add Docker’s official GPG key¶
-```
+# Step 4
 sudo mkdir -p /etc/apt/keyrings
 curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
-```
-Explanation: Adds Docker’s signing key to verify package integrity.
 
-Step 5: Set up repository
-```
-echo \
-"deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] \
-https://download.docker.com/linux/ubuntu \
-$(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-```
-Explanation: Adds Docker’s official repo to apt sources.
+# Step 5
+echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
 
-Step 6: Install Docker CE¶
-```
+# Step 6
 sudo apt update
 sudo apt install -y docker-ce docker-ce-cli containerd.io docker-compose-plugin
-```
-Explanation: Installs Docker engine, CLI, container runtime, and Compose plugin.
 
-Step 7: Start and enable Docker service¶
-```
+# Step 7
 sudo systemctl start docker
 sudo systemctl enable docker
 sudo systemctl status docker
-```
-Explanation: Starts Docker now and on future boots.
-# build docker file
-```
-docker build -t Your_File_Name .
-```
--t student-apache tags your image with the name student-apache.
-. tells Docker to look for the Dockerfile in the current directory.
-# Run Docker Container
-```
-docker run -d -p 8080:80 --name my-student-web Your_File_Name
-```
-```
-docker ps
-```
--d: detached mode
--p 8080:80: map port 8080 on your host to port 80 in the container
---name: give your container a name
-# Now visit http://localhost:8080 to see the deployed page.
-## Docker Hub Account Creation
-In your desktop go to following address:
+</code></pre>
 
-https://hub.docker.com/
-Click on Sign Up
-Select Personal Tab
-Enter your email address
-Put your desired Username
-Enter your password
-Click on Sign Up
-
-Step 4: Verify on Docker Hub
-```
-Go to https://hub.docker.com
-Login to your account
-Navigate to Repositories and confirm your image flask-demo-app:v1 is listed !!!
-```
-============================================================================================
-## 📤 Push Docker Image to Docker Hub
-After building and running your Docker image locally, follow the steps below to push it to Docker Hub.
-
-🔧 Step 1: Tag Your Docker Image
-```
-docker tag Your_Image_Name Your_DockerHub_Username/Your_Repository_Name:latest
-```
-Your_Image_Name: the name of the image you built locally (e.g., student-apache)
-
-Your_DockerHub_Username: your Docker Hub username
-
-Your_Repository_Name: the name of your Docker Hub repository
-
-🔐 Step 2: Log in to Docker Hub
-```
-docker login
-```
-Enter your Docker Hub username and password when prompted.
-
-☁️ Step 3: Push the Image to Docker Hub
-```
-docker push Your_DockerHub_Username/Your_Repository_Name:latest
-```
-This uploads your image to your Docker Hub account.
-
-✅ Step 4: Pull & Run the Image Anywhere
-```
-docker pull Your_DockerHub_Username/Your_Repository_Name:latest
-docker run -d -p 8080:80 Your_DockerHub_Username/Your_Repository_Name:latest
-```
-## If not Worked
-Step 1: Login to Docker Hub
-```
-docker login -u <your_username>
-```
-Enter your Docker Hub username and password when prompted.
-
-Step 2: Tag Your Docker Image
-```
-Replace <your_dockerhub_username> with your actual Docker Hub username:
-docker tag flask-demo-app <your_dockerhub_username>/flask-demo-app:v1
-```
-Step 3: Push the Image to Docker Hub
-```
-docker push <your_dockerhub_username>/flask-demo-app:v1
-```
-Pulls the image from Docker Hub
-## Runs it and maps it to http://localhost:8080
-
-
-
+<h3>Build Docker Image</h3>
+<pre><code>docker build -t student-apache .</code
